# aria2-zero

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yaml  test.yaml
cmake/: config.h.cmake.in
compat/: _getopt.c  boost_locale_libintl.cc  boost_locale_libintl.h  gai_strerror.c  getaddrinfo.c
src/core/: common.h
